--- a/stylesheets/manifest.css
+++ b/stylesheets/manifest.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: 'Roboto-Light';
-  src: url("/fonts/Roboto-Light.ttf") format("truetype"); }
+  src: url("../fonts/Roboto-Light.ttf") format("truetype"); }
 @font-face {
   font-family: 'Roboto';
-  src: url("/fonts/Roboto-Regular.ttf") format("truetype"); }
+  src: url("../fonts/Roboto-Regular.ttf") format("truetype"); }
 @font-face {
   font-family: 'Roboto';
-  src: url("/fonts/Roboto-Italic.ttf") format("truetype");
+  src: url("../fonts/Roboto-Italic.ttf") format("truetype");
   font-style: italic; }
 @font-face {
   font-family: 'Roboto';
-  src: url("/fonts/Roboto-Bold.ttf") format("truetype");
+  src: url("../fonts/Roboto-Bold.ttf") format("truetype");
   font-weight: bold; }
 * {
   box-sizing: border-box; }
